# git-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/command/: handler.rs  mod.rs
src/errors/: mod.rs
src/multiwriter/: mod.rs
src/objects/: tree.rs
src/plumbing/: filemode.rs  hash.rs  index.rs  mod.rs  object.rs  reference.rs  tree.rs
src/plumbing/commit/: mod.rs
src/plumbing/index/: decoder.rs  encoder.rs  mod.rs
src/repo/: mod.rs
src/storage/: filesystem.rs  mod.rs
src/storage/filesys/: mod.rs  reference.rs
src/storage/filesys/dotgit/: mod.rs
src/worktree/: commit.rs  mod.rs
