[package]
name = "git-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
byteorder = "1.5.0"
clap = { version = "4.5.16", features = ["derive"] }
chrono = "0.4.38"
sha1-checked = "0.10.0"
base16ct = { version="0.2.0", features=["alloc"] }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }